kubernetes/identity/base/identity-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: identity
  namespace: identity
  labels:
    app: identity
spec:
  replicas: 1
  selector:
    matchLabels:
      app: identity
  template:
    metadata:
      labels:
        app: identity
    spec:
      imagePullSecrets:
      - name: gitlab-registry
      containers:
      - name: identity
        image: registry.omni-rs.com/r13/omniretailsuite/identity:latest
        ports:
        - containerPort: 5401
        volumeMounts:
        - name: identity-pfx
          mountPath: /app/pfx
        - name: identity-config
          mountPath: /appsettings.json
          subPath: appsettings.json
      volumes:
      - name: identity-pfx 
        secret:
          secretName: omni-rs-com-pfx
      - name: identity-config
        configMap:
          name: identity-config
