kubernetes/identity/base/identity-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: identity-ingress
  namespace: identity
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"   
    #nginx.ingress.kubernetes.io/whitelist-source-range: "192.168.50.0/24, 37.225.0.46"
spec:
  rules:
  - host: identity.omni-rs.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: identity
            port:
              number: 5401
  tls:
  - hosts:
    - identity.omni-rs.com
    secretName: omni-rs-com-tls-sub
